feat: add GET endpoint for retrieving a todo item by ID with Swagger documentation
